[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bug-triage-env"
version = "1.0.0"
description = "OpenEnv RL environment for bug report triage"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "websockets",
    "groq",
]

[project.scripts]
server = "server.app:main"