[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bug-triage-env"
version = "2.0.0"
description = "Multi-step OpenEnv RL environment for bug report triage"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "websockets",
    "requests",
    "openai",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "httpx",
    "groq",
]

[project.scripts]
server = "server.app:main"